feat(api): expose user role in booking response