@@ -7,12 +7,14 @@ import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.apache.logging.log4j.util.Strings;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 @Component
@@ -35,8 +37,11 @@ public class SecurityFilter extends OncePerRequestFilter {
             if (optJwtUserData.isPresent()) {
                 JWTUserData userData = optJwtUserData.get();
 
+                // Converte a String do Role (ex: "ADMIN") para a Autoridade que o Spring entende
+                SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + userData.role());
+
                 UsernamePasswordAuthenticationToken authenticationToken =
-                        new UsernamePasswordAuthenticationToken(userData, null, Collections.emptyList());
+                        new UsernamePasswordAuthenticationToken(userData, null, List.of(authority));
 
                 SecurityContextHolder.getContext().setAuthentication(authenticationToken);
                 System.out.println("✅ Usuário autenticado: " + userData.email());
